# chard

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
chard/: __init__.py  admin.py  discover.py  exceptions.py  models.py  task.py  types.py
chard/management/commands/: chardworker.py
chard/migrations/: 0001_initial.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  configuration.rst  index.rst  quickstart.rst
