[metadata]
name = django-chard
version = 0.2
author = James Potter
author_email = james.potter@gmail.com
description = A very simple async/await background task queue for Django.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drpancake/chard
[options]
packages = find:
python_requires = >=3.8
include_package_data = True